# Rustunnel

./: .gitignore  README.md
docs/client/: format_dns.txt  logique_fr.md
rustunnel/: Cargo.toml
rustunnel-client/: Cargo.toml  TODO.txt
rustunnel-client/src/: dns.rs  proxy.rs  utils.rs
rustunnel-client/tests/: utils.rs
rustunnel-server/: Cargo.toml  TODO.txt
rustunnel-server/src/: dns.rs  handler.rs  main.rs  options.rs  todo.txt  utils.rs
rustunnel-workspace/: Cargo.toml
rustunnel-workspace/rustunnel-client/: Cargo.toml
rustunnel-workspace/rustunnel-client/src/: main.rs  proxy.rs  proxy_bak.rs
rustunnel-workspace/rustunnel-client/tests/: utils.rs
rustunnel-workspace/rustunnel-lib/: Cargo.toml
rustunnel-workspace/rustunnel-lib/src/: dns.rs  utils.rs
rustunnel-workspace/rustunnel-server/: Cargo.toml
rustunnel-workspace/rustunnel-server/src/: handler.rs  main.rs
rustunnel/docs/client/: format_dns.txt  logique_fr.md
rustunnel/src/: client.rs  dns.rs  proxy.rs  server.rs  types.rs  utils.rs
rustunnel/tests/: dns_tests.rs  utils_tests.rs
