[package]
name = "rustunnel_client"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "proxy"
path = "src/proxy.rs"

[lib]
name = "rustunnel_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
hickory-resolver = "0.24.1"
regex = "1.11.1"
rand = "0.8.5"
base32 = "0.5.1"

[profile.release]
lto = true        # Optimisation max
debug = false
opt-level = "z"   # Optimisation pour la taille
codegen-units = 1
