[package]
name = "rustunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]


[profile.release]
lto = true        # Optimisation max
debug = false
opt-level = "z"   # Optimisation pour la taille
codegen-units = 1
