[package]
name = "rustunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"


[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
trust-dns-resolver = "0.20.4"

[profile.release]
lto = true        # Optimisation max
debug = false
opt-level = "z"   # Optimisation pour la taille
codegen-units = 1
