[package]
name = "rustunnel_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"


[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
rustunnel-lib = { path = "../rustunnel-lib" }
rand = "0.8.5"


[profile.release]
lto = true        # Optimisation max
debug = false
opt-level = "z"   # Optimisation pour la taille
codegen-units = 1
