[package]
name = "rustunnel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net"] }
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive", "env"] }
hickory-server = "0.24.1"
hickory-proto = "0.24.1"
hickory-resolver = "0.24.1"
thiserror = "2.0.4"
anyhow = "1.0.94"
rustunnel-lib = { path = "../rustunnel-lib" }
